--- a/index.html
+++ b/index.html
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architect with plain HTML & CSS</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <!-- header section -->
     <header class="header">
 
     </header>
+
     <body>
-        
+        <main>
+            <section class="container">
+                <div class="cta">
+                    <div class="cta-info">
+                        <h1 class="cta-title">Brand New Group of Architects </h1>
+                        <p class="cta-details">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which
+                            don't look even</p>
+                        <a class="btn-primary" href="#" target="_blank">Explore More</a>
+                    </div>
+                    <div class="cta-banner">
+                        <img src="images/banner.png" alt="" srcset="">
+                    </div>
+                </div>
+            </section>
+            <section class="feature-cta">
+                <div class="feature-cta-image">
+                    <img class="feature-cta-image-1" src="images/team1.png" alt="">
+                    <img class="feature-cta-image-2" src="images/team2.png" alt="">
+                    <img class="feature-cta-image-3" src="images/team3.png" alt="">
+                    <img class="feature-cta-image-4" src="images/team4.png" alt="">
+                </div>
+                <div class="feature-cta-info">
+                    <h1 class="feature-cta-title"><span class="cta-title-1">Quick list <span class="cta-title-2">of
+                                Our</span><br><span class="cta-title-3">Features</span></h1>
+                    <p class="feature-cta-details">There are many variations of passages of Lorem Ipsum available,<br>
+                        but
+                        the majority have suffered alteration in some form, by injected<br> humour, or randomised words
+                        which don't look even</p>
+                    <a class="btn-primary" href="#" target="_blank">Explore More</a>
+                </div>
+            </section>
+        </main>
+
     </body>
 </body>
+
 </html>
