--- a/index.html
+++ b/index.html
@@ -49,6 +49,51 @@
                     <a class="btn-primary" href="#" target="_blank">Explore More</a>
                 </div>
             </section>
+            <section class="all-feature">
+                <div class="features-name">
+                    <div class="feautures-info">
+                        <h1 class="all-feature-title">Features you will love & enjoy</h1>
+                    </div>
+                    <p class="all-feature-details-text">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by injected humour, or randomised words
+                        which don't look even</p>
+                    <div class="features">
+                        <div class="feature-details">
+                            <h1 class="feature-title">Desktop & Mobile Version</h1>
+                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-details">
+                            <h1 class="feature-title">Drag & Drop Builder</h1>
+                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-details">
+                            <h1 class="feature-title">Awesome Modern Design</h1>
+                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-details">
+                            <h1 class="feature-title">Super Easy to Edit</h1>
+                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                                available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="feature-experience-detail">
+                    <div class="feature-experience-img"><img src="images/architect.png" alt=""></div>
+                    <div class="feature-experience">
+                        <h1 class="experiance-time">10+Year<br>
+                            <span class="experiance-text">Experience</span>
+                        </h1>
+                    </div>
+                </div>
+            </section>
         </main>
 
     </body>
