--- a/index.html
+++ b/index.html
@@ -15,88 +15,136 @@
 
     </header>
 
-    <body>
-        <main>
-            <section class="container">
-                <div class="cta">
-                    <div class="cta-info">
-                        <h1 class="cta-title">Brand New Group of Architects </h1>
-                        <p class="cta-details">There are many variations of passages of Lorem Ipsum available, but the
-                            majority have suffered alteration in some form, by injected humour, or randomised words
-                            which
-                            don't look even</p>
-                        <a class="btn-primary" href="#" target="_blank">Explore More</a>
-                    </div>
-                    <div class="cta-banner">
-                        <img src="images/banner.png" alt="" srcset="">
-                    </div>
-                </div>
-            </section>
-            <section class="feature-cta">
-                <div class="feature-cta-image">
-                    <img class="feature-cta-image-1" src="images/team1.png" alt="">
-                    <img class="feature-cta-image-2" src="images/team2.png" alt="">
-                    <img class="feature-cta-image-3" src="images/team3.png" alt="">
-                    <img class="feature-cta-image-4" src="images/team4.png" alt="">
-                </div>
-                <div class="feature-cta-info">
-                    <h1 class="feature-cta-title"><span class="cta-title-1">Quick list <span class="cta-title-2">of
-                                Our</span><br><span class="cta-title-3">Features</span></h1>
-                    <p class="feature-cta-details">There are many variations of passages of Lorem Ipsum available,<br>
-                        but
-                        the majority have suffered alteration in some form, by injected<br> humour, or randomised words
-                        which don't look even</p>
-                    <a class="btn-primary" href="#" target="_blank">Explore More</a>
-                </div>
-            </section>
-            <section class="all-feature">
-                <div class="features-name">
-                    <div class="feautures-info">
-                        <h1 class="all-feature-title">Features you will love & enjoy</h1>
-                    </div>
-                    <p class="all-feature-details-text">There are many variations of passages of Lorem Ipsum available,
-                        but the majority have suffered alteration in some form, by injected humour, or randomised words
-                        which don't look even</p>
-                    <div class="features">
-                        <div class="feature-details">
-                            <h1 class="feature-title">Desktop & Mobile Version</h1>
-                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
-                                available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomised...........</p>
-                        </div>
-                        <div class="feature-details">
-                            <h1 class="feature-title">Drag & Drop Builder</h1>
-                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
-                                available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomised...........</p>
-                        </div>
-                        <div class="feature-details">
-                            <h1 class="feature-title">Awesome Modern Design</h1>
-                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
-                                available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomised...........</p>
-                        </div>
-                        <div class="feature-details">
-                            <h1 class="feature-title">Super Easy to Edit</h1>
-                            <p class="feature-description">There are many variations of passages of Lorem Ipsum
-                                available, but the majority have
-                                suffered alteration in some form, by injected humour, or randomised...........</p>
-                        </div>
+    <section class="container">
+        <div class="cta">
+            <div class="cta-info">
+                <h1 class="cta-title">Brand New Group of Architects </h1>
+                <p class="cta-details">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words
+                    which
+                    don't look even</p>
+                <a class="btn-primary" href="#" target="_blank">Explore More</a>
+            </div>
+            <div class="cta-banner">
+                <img src="images/banner.png" alt="" srcset="">
+            </div>
+        </div>
+    </section>
+    <main>
 
-                    </div>
+        <section class="feature-cta">
+            <div class="feature-cta-image">
+                <img class="feature-cta-image-1" src="images/team1.png" alt="">
+                <img class="feature-cta-image-2" src="images/team2.png" alt="">
+                <img class="feature-cta-image-3" src="images/team3.png" alt="">
+                <img class="feature-cta-image-4" src="images/team4.png" alt="">
+            </div>
+            <div class="feature-cta-info">
+                <h1 class="feature-cta-title"><span class="cta-title-1">Quick list <span class="cta-title-2">of
+                            Our</span><br><span class="cta-title-3">Features</span></h1>
+                <p class="feature-cta-details">There are many variations of passages of Lorem Ipsum available,<br>
+                    but
+                    the majority have suffered alteration in some form, by injected<br> humour, or randomised words
+                    which don't look even</p>
+                <a class="btn-primary" href="#" target="_blank">Explore More</a>
+            </div>
+        </section>
+        <section class="all-feature">
+            <div class="features-name">
+                <div class="feautures-info">
+                    <h1 class="all-feature-title">Features you will love & enjoy</h1>
                 </div>
-                <div class="feature-experience-detail">
-                    <div class="feature-experience-img"><img src="images/architect.png" alt=""></div>
-                    <div class="feature-experience">
-                        <h1 class="experiance-time">10+Year<br>
-                            <span class="experiance-text">Experience</span>
-                        </h1>
+                <p class="all-feature-details-text">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour, or randomised words
+                    which don't look even</p>
+                <div class="features">
+                    <div class="feature-details">
+                        <h1 class="feature-title">Desktop & Mobile Version</h1>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
-                </div>
-            </section>
-        </main>
+                    <div class="feature-details">
+                        <h1 class="feature-title">Drag & Drop Builder</h1>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-details">
+                        <h1 class="feature-title">Awesome Modern Design</h1>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-details">
+                        <h1 class="feature-title">Super Easy to Edit</h1>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
 
-    </body>
+                </div>
+            </div>
+            <div class="feature-experience-detail">
+                <div class="feature-experience-img"><img src="images/architect.png" alt=""></div>
+                <div class="feature-experience">
+                    <h1 class="experiance-time">10+Year<br>
+                        <span class="experiance-text">Experience</span>
+                    </h1>
+                </div>
+            </div>
+        </section>
+        <section class="other-facts">
+            <div class="other-facts-info">
+                <h1 class="other-facts-title">Some Facts</h1>
+                <p class="other-facts-description">There are many variations of passages of Lorem Ipsum available,
+                    but<br> the majority have suffered alteration.</p>
+            </div>
+            <div class="other-facts-achievement">
+                <div class="achievement">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1 class="achievement-title">54</h1>
+                    <p class="achievement-detail">Awards Winnings</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/projects.png" alt="">
+                    <h1 class="achievement-title">1458</h1>
+                    <p class="achievement-detail">Project Finished</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1 class="achievement-title">590</h1>
+                    <p class="achievement-detail">Clients Worked</p>
+                </div>
+                <div class="achievement">
+                    <img src="images/icons/email.png" alt="">
+                    <h1 class="achievement-title">22578</h1>
+                    <p class="achievement-detail">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <section class="sponsor">
+            <div class="spondor-info">
+                <h1 class="sponsor-title">Some Facts</h1>
+                <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available,
+                    but<br> the majority have suffered alteration.</p>
+            </div>
+
+            <div class="sponsor-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="copyright">
+            <p class="copyright-text">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
