mobile responsive max-width:576px knocking

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <body>
     <!-- header section -->
     <header class="header">
+        <div class="brand-identity">G3 Architects</div>
+        <div class="nav-menu">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </div>
 
     </header>
 
@@ -30,7 +39,7 @@
             </div>
         </div>
     </section>
-    <main>
+    <main class="main">
 
         <section class="feature-cta">
             <div class="feature-cta-image">
